--- a/css/styles.css
+++ b/css/styles.css
@@ -66,10 +66,7 @@ img {
 element styles header */
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 25px;
-
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .header-container {
@@ -114,6 +111,8 @@ element styles header */
 
   padding-top: 32px;
   padding-bottom: 32px;
+
+  display: block;
 }
 
 .header-link:hover,
@@ -136,6 +135,8 @@ element styles header */
 
   padding-top: 32px;
   padding-bottom: 32px;
+
+  display: block;
 }
 
 .contacts-item:not(:last-child) {
@@ -153,8 +154,8 @@ element styles header */
   background-color: var(--additional-background-color);
   text-align: center;
 
-  padding-top: 194px;
-  padding-bottom: 206px;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -165,10 +166,12 @@ element styles header */
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
-  text-align: center;
+  max-width: 694px;
 
-  padding-left: 252px;
-  padding-right: 252px;
+  margin-right: auto;
+  margin-left: auto;
+
+  text-align: center;
 
   margin-bottom: 30px;
 }
@@ -200,7 +203,6 @@ element styles section features */
 .features {
   /* background-color: tomato; */
   padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .features-list {
@@ -372,7 +374,7 @@ element styles footer */
   color: var(--additional-text-color);
 }
 
-.footer-item {
+.footer-item:not(:last-child) {
   margin-bottom: 9px;
 }
 
@@ -383,10 +385,26 @@ element styles footer */
   padding-bottom: 94px;
 }
 
+.portfolio-heading {
+  text-align: center;
+
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .list-menu {
   display: flex;
   justify-content: center;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .portfolio-list-item:not(:last-child) {
@@ -406,6 +424,8 @@ element styles footer */
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   border: none;
+
+  padding: 6px 22px;
 }
 
 .portfolio-btn {
@@ -423,6 +443,8 @@ element styles footer */
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   border: none;
+
+  padding: 6px 22px;
 }
 
 .portfolio-btn:hover,
@@ -448,7 +470,9 @@ element styles footer */
 .portfolio-box {
   padding: 20px 24px;
 
-  border: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 
 .portfolio-title {
